--- a/index.html
+++ b/index.html
@@ -1,93 +1,83 @@
 <!DOCTYPE html>
-<html>
+<!-- Coding By CodingNepal - youtube.com/codingnepal -->
+<html lang="en">
 <head>
-<link rel="stylesheet" href="main.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login Form validation in HTML & CSS | CodingNepal</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 </head>
-
-<style>
-
-
-
-</style>
-
-
-<img src="https://i.gifer.com/Fw3P.gif" alt="My GIF" width="100" height="100" id="coin">
-<img src="https://static.wikia.nocookie.net/clashofclans/images/b/b9/Gold_Mine13.png/revision/latest?cb=20181023115050" alt="My GIF" width="100" height="100" id="gm">
 <body>
-
-<p id="pocet">Value: <span id="value">0</span></p>
-<p id="infogm">Onlock for <br>1000 coins</p>
-<p id="level">Level: <span id="level-value"></span> <br> Price: <span id="price"></span></p>
-
-<button id="add" onclick="pridej()">+</button>
-<button id="gmunlock" onclick="upgrade();odemknigm();"></button>
-
-
-
-
-<script>
-
-  let count = 0;
-  var gm = 0;
-  var lvl = 0;
-  var price = 2000;
-function pridej() {
-  count +=1000;
-  document.getElementById("value").innerHTML = count;
+  <div class="wrapper">
+    <header>Login Form</header>
+    <form action="#">
+      <div class="field email">
+        <div class="input-area">
+          <input type="text" placeholder="Email Address">
+          <i class="icon fas fa-envelope"></i>
+          <i class="error error-icon fas fa-exclamation-circle"></i>
+        </div>
+        <div class="error error-txt">Email can't be blank</div>
+      </div>
+      <div class="field password">
+        <div class="input-area">
+          <input type="password" placeholder="Password">
+          <i class="icon fas fa-lock"></i>
+          <i class="error error-icon fas fa-exclamation-circle"></i>
+        </div>
+        <div class="error error-txt">Password can't be blank</div>
+      </div>
+      <div class="pass-txt"><a href="#">Forgot password?</a></div>
+      <input type="submit" value="Login">
+    </form>
+    <div class="sign-txt">Not yet member? <a href="#">Signup now</a></div>
+  </div>
+  <script>
+  	
+  	const form = document.querySelector("form");
+eField = form.querySelector(".email"),
+eInput = eField.querySelector("input"),
+pField = form.querySelector(".password"),
+pInput = pField.querySelector("input");
+form.onsubmit = (e)=>{
+  e.preventDefault(); //preventing from form submitting
+  //if email and password is blank then add shake class in it else call specified function
+  (eInput.value == "") ? eField.classList.add("shake", "error") : checkEmail();
+  (pInput.value == "") ? pField.classList.add("shake", "error") : checkPass();
+  setTimeout(()=>{ //remove shake class after 500ms
+    eField.classList.remove("shake");
+    pField.classList.remove("shake");
+  }, 500);
+  eInput.onkeyup = ()=>{checkEmail();} //calling checkEmail function on email input keyup
+  pInput.onkeyup = ()=>{checkPass();} //calling checkPassword function on pass input keyup
+  function checkEmail(){ //checkEmail function
+    let pattern = /^[^ ]+@[^ ]+\.[a-z]{2,3}$/; //pattern for validate email
+    if(!eInput.value.match(pattern)){ //if pattern not matched then add error and remove valid class
+      eField.classList.add("error");
+      eField.classList.remove("valid");
+      let errorTxt = eField.querySelector(".error-txt");
+      //if email value is not empty then show please enter valid email else show Email can't be blank
+      (eInput.value != "") ? errorTxt.innerText = "Enter a valid email address" : errorTxt.innerText = "Email can't be blank";
+    }else{ //if pattern matched then remove error and add valid class
+      eField.classList.remove("error");
+      eField.classList.add("valid");
+    }
+  }
+  function checkPass(){ //checkPass function
+    if(pInput.value == ""){ //if pass is empty then add error and remove valid class
+      pField.classList.add("error");
+      pField.classList.remove("valid");
+    }else{ //if pass is empty then remove error and add valid class
+      pField.classList.remove("error");
+      pField.classList.add("valid");
+    }
+  }
+  //if eField and pField doesn't contains error class that mean user filled details properly
+  if(!eField.classList.contains("error") && !pField.classList.contains("error")){
+    window.location.href = form.getAttribute("action"); //redirecting user to the specified url which is inside action attribute of form tag
+  }
 }
-
-function goldmine() {
-
-	if (gm > 0) {
-	count += lvl;
-  document.getElementById("value").innerHTML = count;
-
-   }
-}
-
-setInterval(goldmine, 1000);
-
-function upgrade(){
-
-if (gm == 1 && count > price){
-count -=price;
-lvl++;
-price +=1000;
-
-document.getElementById("level-value").innerHTML = lvl;
-document.getElementById("price").innerHTML = price;
-
-console.log(lvl);
-
-}
-
- }
-
-
-function odemknigm()
-{
-
-	if (count >= 1000 && gm == 0) {
-gm ++;
-count -=1000;
-lvl++;
-document.getElementById("price").innerHTML = "2000";
-document.getElementById("gmunlock").style.backgroundImage = "url(https://e7.pngegg.com/pngimages/708/355/png-clipart-green-arrow-upgrade-button-trademark-logo.png)";
-
-document.getElementById("infogm").innerHTML = "Production: <br> <span id=level-value> </span> per second";
-document.getElementById("level-value").innerHTML = lvl; 
-console.log("gm =", gm);
-	console.log("odemkni function called");
-	}
-
-}
-
-
-
-
-
-
-</script>
-
+  </script>
 </body>
 </html>
