--- a/index.html
+++ b/index.html
@@ -1,83 +1,157 @@
-<!DOCTYPE html>
-<!-- Coding By CodingNepal - youtube.com/codingnepal -->
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login Form validation in HTML & CSS | CodingNepal</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+  <title>HRA NA MOBIL</title>
+  <link rel="stylesheet"  href="style.css">
 </head>
+
+<style>
+  
+</style>
+
 <body>
-  <div class="wrapper">
-    <header>Login Form</header>
-    <form action="#">
-      <div class="field email">
-        <div class="input-area">
-          <input type="text" placeholder="Email Address">
-          <i class="icon fas fa-envelope"></i>
-          <i class="error error-icon fas fa-exclamation-circle"></i>
-        </div>
-        <div class="error error-txt">Email can't be blank</div>
-      </div>
-      <div class="field password">
-        <div class="input-area">
-          <input type="password" placeholder="Password">
-          <i class="icon fas fa-lock"></i>
-          <i class="error error-icon fas fa-exclamation-circle"></i>
-        </div>
-        <div class="error error-txt">Password can't be blank</div>
-      </div>
-      <div class="pass-txt"><a href="#">Forgot password?</a></div>
-      <input type="submit" value="Login">
-    </form>
-    <div class="sign-txt">Not yet member? <a href="#">Signup now</a></div>
-  </div>
+  <button id="red" onclick="randombarvaRED();"></button>
+  <button id="blue" onclick="randombarvaBLUE();"></button>
+  <button id="yellow"onclick="randombarvaYELLOW();"></button>
+  <button id="green" onclick="randombarvaGREEN();"></button>
+  <button id="guess"></button>
+  <button id="start" onclick="startTimer();randombarva();">Start</button>
+  <button id="reset" onclick="restart();">Restart</button>
+  <p id="casovac"> Čas: 30s</p>
+  <p id="skore"> Skore: 0</p>
   <script>
-  	
-  	const form = document.querySelector("form");
-eField = form.querySelector(".email"),
-eInput = eField.querySelector("input"),
-pField = form.querySelector(".password"),
-pInput = pField.querySelector("input");
-form.onsubmit = (e)=>{
-  e.preventDefault(); //preventing from form submitting
-  //if email and password is blank then add shake class in it else call specified function
-  (eInput.value == "") ? eField.classList.add("shake", "error") : checkEmail();
-  (pInput.value == "") ? pField.classList.add("shake", "error") : checkPass();
-  setTimeout(()=>{ //remove shake class after 500ms
-    eField.classList.remove("shake");
-    pField.classList.remove("shake");
-  }, 500);
-  eInput.onkeyup = ()=>{checkEmail();} //calling checkEmail function on email input keyup
-  pInput.onkeyup = ()=>{checkPass();} //calling checkPassword function on pass input keyup
-  function checkEmail(){ //checkEmail function
-    let pattern = /^[^ ]+@[^ ]+\.[a-z]{2,3}$/; //pattern for validate email
-    if(!eInput.value.match(pattern)){ //if pattern not matched then add error and remove valid class
-      eField.classList.add("error");
-      eField.classList.remove("valid");
-      let errorTxt = eField.querySelector(".error-txt");
-      //if email value is not empty then show please enter valid email else show Email can't be blank
-      (eInput.value != "") ? errorTxt.innerText = "Enter a valid email address" : errorTxt.innerText = "Email can't be blank";
-    }else{ //if pattern matched then remove error and add valid class
-      eField.classList.remove("error");
-      eField.classList.add("valid");
+    var cas = 30;
+    var intervalId;
+    var score = 0;
+    var cink = new Audio ("https://cdn.pixabay.com/download/audio/2022/01/18/audio_8db1f1b5a5.mp3?filename=snd_fragment_retrievewav-14728.mp3");
+     function startTimer() {
+      // Check if the interval is already running
+      if (!intervalId && cas == 30) {
+        intervalId = setInterval(() => {
+          cas--;
+          document.getElementById("casovac").innerHTML = "Čas: " + cas + "s";
+
+          if (cas === 0) {
+            clearInterval(intervalId);
+            intervalId = null;
+          }
+        }, 1000);
+      }
     }
-  }
-  function checkPass(){ //checkPass function
-    if(pInput.value == ""){ //if pass is empty then add error and remove valid class
-      pField.classList.add("error");
-      pField.classList.remove("valid");
-    }else{ //if pass is empty then remove error and add valid class
-      pField.classList.remove("error");
-      pField.classList.add("valid");
-    }
-  }
-  //if eField and pField doesn't contains error class that mean user filled details properly
-  if(!eField.classList.contains("error") && !pField.classList.contains("error")){
-    window.location.href = form.getAttribute("action"); //redirecting user to the specified url which is inside action attribute of form tag
-  }
+
+
+function randombarva(){
+  const guess = document.getElementById("guess");
+  const colors = ["blue", "red", "yellow", "green"];
+  const randomColor = colors[Math.floor(Math.random() * colors.length)];
+  guess.style.backgroundColor = randomColor;
 }
+
+
+function randombarvaRED() {
+
+  // Make sure that the guess and skore variables are defined and have the correct values
+  const colors = ["blue", "red", "yellow", "green"];
+  const randomColor = colors[Math.floor(Math.random() * colors.length)];
+  const guess = document.getElementById("guess");
+  const skore = document.getElementById("skore");
+
+  // Get the computed style of the guess button
+  const style = window.getComputedStyle(guess);
+
+  // Get the value of the background-color property
+  const backgroundColor = style.getPropertyValue("background-color");
+
+  // Compare the background color to the RGB value of red
+  if (backgroundColor === "rgb(255, 0, 0)" && cas > 0 && cas < 30 ) {
+    score++;
+    skore.innerHTML = `Skore: ${score}`;
+guess.style.backgroundColor = randomColor;
+cink.play();
+cink.currentTime = 0;
+  } 
+}
+
+
+function randombarvaBLUE() {
+  // Make sure that the guess and skore variables are defined and have the correct values
+  const colors = ["blue", "red", "yellow", "green"];
+  const randomColor = colors[Math.floor(Math.random() * colors.length)];
+  const guess = document.getElementById("guess");
+  const skore = document.getElementById("skore");
+
+  // Get the computed style of the guess button
+  const style = window.getComputedStyle(guess);
+
+  // Get the value of the background-color property
+  const backgroundColor = style.getPropertyValue("background-color");
+
+  // Compare the background color to the RGB value of red
+  if (backgroundColor === "rgb(0, 0, 255)" && cas > 0 && cas > 0 ) {
+    score++;
+    skore.innerHTML = `Skore: ${score}`;
+guess.style.backgroundColor = randomColor;
+cink.play();
+cink.currentTime = 0;
+  } 
+}
+
+
+function randombarvaYELLOW() {
+  // Make sure that the guess and skore variables are defined and have the correct values
+  const colors = ["blue", "red", "yellow", "green"];
+  const randomColor = colors[Math.floor(Math.random() * colors.length)];
+  const guess = document.getElementById("guess");
+  const skore = document.getElementById("skore");
+
+  // Get the computed style of the guess button
+  const style = window.getComputedStyle(guess);
+
+  // Get the value of the background-color property
+  const backgroundColor = style.getPropertyValue("background-color");
+
+  // Compare the background color to the RGB value of red
+  if (backgroundColor === "rgb(255, 255, 0)" && cas > 0 && cas > 0 ) {
+    score++;
+    skore.innerHTML = `Skore: ${score}`;
+guess.style.backgroundColor = randomColor;
+cink.play();
+cink.currentTime = 0;
+  } 
+}
+
+function randombarvaGREEN() {
+  // Make sure that the guess and skore variables are defined and have the correct values
+  const colors = ["blue", "red", "yellow", "green"];
+  const randomColor = colors[Math.floor(Math.random() * colors.length)];
+  const guess = document.getElementById("guess");
+  const skore = document.getElementById("skore");
+
+  // Get the computed style of the guess button
+  const style = window.getComputedStyle(guess);
+
+  // Get the value of the background-color property
+  const backgroundColor = style.getPropertyValue("background-color");
+
+  // Compare the background color to the RGB value of red
+  if (backgroundColor === "rgb(0, 128, 0)" && cas > 0 && cas > 0 ) {
+    score++;
+    skore.innerHTML = `Skore: ${score}`;
+guess.style.backgroundColor = randomColor;
+cink.play();
+cink.currentTime = 0;
+  } 
+}
+
+function restart(){
+if (cas == 0){
+cas =+ 30;
+score = 0;
+skore.innerHTML = `Skore: ${score}`;
+document.getElementById("casovac").innerHTML = "Čas: " + cas + "s";
+}
+}
+
   </script>
 </body>
+
 </html>
